build: Updated header in Makefile.

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,4 @@
 *.f90 filter=rcs-keywords
 *.F90 filter=rcs-keywords
 *.py filter=rcs-keywords
-GNUmakefile filter=rcs-keywords
+Makefile filter=rcs-keywords
