test: Fixed test_pdim_types to actually run. Made a helper subroutine to make more tests for pdim_types.f90.

--- a/f90.yaml
+++ b/f90.yaml
@@ -155,6 +155,7 @@ regexp-rules:
     message: At least one space before comment
     regexp: (\S)\!
     replacement: \1 !
+    active: false
 
   one-space-after-comment:
     message: Exactly one space after comment
