fix: Got pdim_types.f90 to compile with ifx/ifort. The number of interfaces is unfortunately becoming too high.

--- a/f90.yaml
+++ b/f90.yaml
@@ -98,7 +98,8 @@ regexp-rules:
     message: Missing space before operator
     regexp: ([^\s=])({operators})(?=\s)
     replacement: \1 \2
-    active: true
+    active: false
+    # Disabled due to false positive in test_pdim_types.f90 on bash redirection operator for standard error.
 
   missing-space-after-operator:
     message: Missing space after operator
