build: Added an option to the input file to not check for the existence of certain modules.

--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,5 @@
 directories = app src test
 
 [depends]
-directories = app src test
+directories        = app src test
+no_existence_check = build units
