build: Got f90lint to be able to ignore particular messages per file. Readded f90lint to make lint.

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,8 @@
 [f90lint]
-directories = app src test
+directories              = app src test
+skip_indexing            = src/debug.f90 src/release.f90 src/units.f90
+ignore_assertion_density = 
+ignore_test_sloc_ratio   = src/genunits_io.f90 src/timer.f90
 
 [depends]
 directories = app src test
@@ -9,7 +12,7 @@ directories = app src test
 no_existence_check = build units
 
 # The `build` module (debug.f90 or release.f90, depending on the value of the `BUILD` make macro) disables assertions. Because this violates this program's assumption that the filename matches that of the module name (`build` is not the same as `debug` or `release`), I had to add some logic to this program to handle this case. Part of that includes ignoring the following files and manually adding a file with the filename `$(BUILD)` later.
-skip_indexing = src/debug.f90 src/release.f90
+skip_indexing = src/debug.f90 src/release.f90 src/units.f90
 
 # Output files
 depends_file = mk/depends.mk
