--- a/config.ini
+++ b/config.ini
@@ -12,7 +12,9 @@ directories = app src test
 no_existence_check = build revision units
 
 # The `build` module (debug.f90 or release.f90, depending on the value of the `BUILD` make macro) disables assertions. Because this violates this program's assumption that the filename matches that of the module name (`build` is not the same as `debug` or `release`), I had to add some logic to this program to handle this case. Part of that includes ignoring the following files and manually adding a file with the filename `$(BUILD)` later.
-skip_indexing = src/debug.f90 src/release.f90 src/units.f90
+module_name_mismatch = src/debug.f90 src/release.f90
+
+skip_indexing = src/units.f90
 
 # Output files
 depends_file = mk/depends.mk
