build: Renamed testnml.mk to before.mk.

--- a/config.ini
+++ b/config.ini
@@ -18,4 +18,4 @@ skip_indexing = src/units.f90
 
 # Output files
 depends_file = mk/depends.mk
-testnml_file = mk/testnml.mk
+before_file  = mk/before.mk
