build: Added ability to extend ALLSRC in the Makefiles to include more files.

--- a/config.ini
+++ b/config.ini
@@ -20,3 +20,5 @@ skip_indexing = src/revision.f90 src/units.f90
 # Output files
 depends_file = mk/depends.mk
 before_file  = mk/before.mk
+
+allsrc = test/genunits_input.nml 
