feat: Added the cli module for a simple command-line interface. Added the sysexits module for sysexits standard program exit codes. Changed revision.f90 to use the Git tag as a version number.

--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 directories              = app src test
 skip_indexing            = src/debug.f90 src/release.f90 src/revision.f90 src/units.f90
 ignore_assertion_density = 
-ignore_test_sloc_ratio   = src/genunits_io.f90 src/timer.f90
+ignore_test_sloc_ratio   = src/cli.f90 src/genunits_io.f90 src/timer.f90
 
 [depends]
 directories = app src test
