feat: Changes needed to make genunits work with fmad at the same time. Added unary plus to fmad and allowed genunits to change the module name.
build: Changes include a significant change to how depends.py works. Now units.f90 and units_ad.f90 will be generated before depends.py runs to automatically obtain their dependencies, as their dependencies are more complex now that fmad is involved.

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [f90lint]
 directories              = app src test
-skip_indexing            = src/debug.f90 src/release.f90 src/revision.f90 src/units.f90
+skip_indexing            = src/debug.f90 src/release.f90 src/revision.f90 src/units.f90 src/units_ad.f90
 ignore_assertion_density = 
 ignore_test_sloc_ratio   = src/cli.f90 src/genunits_io.f90 src/timer.f90
 
@@ -14,11 +14,13 @@ no_existence_check = build revision units
 # The `build` module (debug.f90 or release.f90, depending on the value of the `BUILD` make macro) disables assertions. Because this violates this program's assumption that the filename matches that of the module name (`build` is not the same as `debug` or `release`), I had to add some logic to this program to handle this case. Part of that includes ignoring the following files and manually adding a file with the filename `$(BUILD)` later.
 module_name_mismatch = src/debug.f90 src/release.f90
 
-# The following are automatically generated and are not always present, so they should not be indexed.
-skip_indexing = src/revision.f90 src/units.f90
+# The following are not always present, so they should not be indexed.
+skip_indexing = src/revision.f90
 
 # Output files
 depends_file = mk/depends.mk
 before_file  = mk/before.mk
 
-allsrc = test/genunits_input.nml 
+allsrc = test/genunits_input.nml test/genunits_input_ad.nml
+# `not_allsrc` is needed for automatically generated files as they will cause circular dependencies when listed as `ALLSRC` in the Makefiles.
+not_allsrc = src/units.f90 src/units_ad.f90
