build: Made rev.f90 its own module to prevent recompiling nearly everything when any file changes. Before when a file changed, revision.f90 (replaced by rev.f90 due to variable named REVISION) would be changed. The build module included revision.f90, so anything depending on the build module would be rebuilt. That included the checks module, which includes my assertions. Because I want a minimum assertion density, basically everything depends on checks. So changing any file would change revision.f90, which would lead to basically everything being rebuilt. This avoids unnecessary rebuilds.

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [f90lint]
 directories              = app src test
-skip_indexing            = src/debug.f90 src/release.f90 src/revision.f90 src/units.f90 src/units_ad.f90
+skip_indexing            = src/debug.f90 src/release.f90 src/rev.f90 src/units.f90 src/units_ad.f90
 ignore_assertion_density = 
 ignore_test_sloc_ratio   = src/cli.f90 src/genunits_io.f90 src/timer.f90
 
@@ -15,7 +15,7 @@ no_existence_check = build revision units
 module_name_mismatch = src/debug.f90 src/release.f90
 
 # The following are not always present, so they should not be indexed.
-skip_indexing = src/revision.f90
+skip_indexing = src/rev.f90
 
 # Output files
 depends_file = mk/depends.mk
