feat: Added more tests for reals in unittest.

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@ directories              = app src test
 skip_indexing            = src/debug.f90 src/release.f90 src/rev.f90 src/units.f90 src/units_ad.f90
 ignore_assertion_density = 
 ignore_test_sloc_ratio   = src/cli.f90 src/genunits_io.f90 src/timer.f90
+ignore_branch_density    = 
+ignore_comment_density   = src/unittest.f90
 
 [depends]
 directories = app src test
