--- a/config.ini
+++ b/config.ini
@@ -2,7 +2,7 @@
 directories              = app src test
 skip_indexing            = src/debug.f90 src/release.f90 src/rev.f90 src/units.f90 src/units_ad.f90
 ignore_assertion_density = 
-ignore_test_sloc_ratio   = src/cli.f90 src/genunits_io.f90 src/timer.f90
+ignore_test_sloc_ratio   = src/cli.f90 src/convergence.f90 src/genunits_io.f90 src/timer.f90
 ignore_branch_density    = 
 ignore_comment_density   = src/unittest.f90
 
