docs: Many additions to the to-do lists.
build: Fixed a bug in f90.yaml that lead to false positives in flinter.

fix: Corrected a default number in the genetic algorithm and updated an associated test.

feat: Started a constructor to create a "standard" genetic algorithm configuration if the population size is not 50.

--- a/f90.yaml
+++ b/f90.yaml
@@ -436,10 +436,12 @@ regexp-rules:
 
   integer-kind-on-real:
     message: Don't use integer kind on a real.
-    regexp: \breal\(I
+    case-sensitive: true
+    regexp: \breal\(I\d
 
   real-kind-on-integer:
     message: Don't use real kind on an integer.
+    case-sensitive: true
     regexp: \binteger\(WP\)
 
   use-only:
