build, fix: Fixed building by adding new autogenerated files to a list of files that are autogenerated.

--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ before_file  = mk/before.mk
 
 allsrc = test/genunits_input.nml test/genunits_input_ad.nml
 # `not_allsrc` is needed for automatically generated files as they will cause circular dependencies when listed as `ALLSRC` in the Makefiles.
-not_allsrc = src/units.f90 src/units_ad.f90
+not_allsrc = src/units.f90 src/units_ad.f90 src/geninput_subroutine.f90 src/geninput_type.f90
 
 # By default, only test files which correspond to modules are added to `TESTNML` and run with `make check`.
 # I didn't want to run everything in the test directory as some of the Fortran files in there were for specific tests and would be redundantly run.
